--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                         <div class="sns-box__cont sns-cont-pc">
                             <img src="images/SNS/SNS10.png" alt="sns">
                             <img src="images/SNS/SNS-hover.png" alt="opacity-bg">
-                            <img src="images/SNS/SNS-Instagram.png" alt="instagram">
+                            <img src="images/SNS/SNS-Instagram.png" alt="instagram1">
                             <a href="javascript:void(0)" class="btn btn--sns">Show now</a>
                         </div>
                     </div>
