--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                         <div class="sns-box__cont sns-cont-pc">
                             <img src="images/SNS/SNS09.png" alt="sns">
                             <img src="images/SNS/SNS-hover.png" alt="opacity-bg">
-                            <img src="images/SNS/SNS-Instagram.png" alt="instagram1">
+                            <img src="images/SNS/SNS-Instagram.png" alt="instagram">
                             <a href="javascript:void(0)" class="btn btn--sns">Show now</a>
                         </div>
                         <div class="sns-box__cont sns-cont-pc">
